# near-station

./: CMakeLists.txt  README.md  cmake-3.23.1-linux-x86_64.sh
src/: FarProccess.cpp  FarProccess.h  NearProccess.cpp  NearProccess.h  centralinterface.h  client.cpp  client.h  networkcom.cpp  networkcom.h  packinterface.h  processmsg.h  server.cpp  server.h  t2li.h  xbeeinterface.h  xbeeproccess.cpp
src/msg_outline/: Cmdmsg.cpp  Cmdmsg.h  Generalmsg.cpp  Generalmsg.h  Logmsg.cpp  Logmsg.h  MsgHistory.cpp  MsgHistory.h  T2msg.cpp  T2msg.h  T3msg.cpp  T3msg.h  augermsg.h
